# sentimental

./: .wordlist.txt  LAUNCH_LINUX.sh  LAUNCH_WINDOWS.bat  README.md  driver.py  extension_handler.py  logger.py  main.py  pyproject.toml  requirements.txt  source_webpage.py  stock_data.py  test_driver.py  test_extension_handler.py  test_logger.py  test_source_webpage.py  test_stock_data.py  test_text_scraper.py  test_web_page.py  test_web_scraper.py  test_web_source.py  text_scraper.py  web_page.py  web_scraper.py  web_source.py
.github/workflows/: python-app.yml
data/: sp500.txt
sentimental/: database_connector.py  driver.py  extension_handler.py  logger.py  stock_data.py  web_scraper.py  web_source.py
test/: test_driver.py  test_extension_handler.py  test_logger.py  test_stock_data.py  test_web_scraper.py
tests/: test_stock_data.py  test_web_scraper.py  test_web_source.py
